Fix nav on mobile

--- a/src/css/abstracts/_util.scss
+++ b/src/css/abstracts/_util.scss
@@ -1,10 +1,17 @@
-﻿.no-select {
+﻿@use '../abstracts/variables' as *;
+
+.no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+}
+
+.no-scroll-mobile-only {
+  overflow: hidden;
+  height: 100%;
 }
 
 .fadeIn {
@@ -31,4 +38,14 @@
   to {
     opacity: 0;
   }
+}
+
+/* Desktop */
+@media (min-width: $bp-lg) {
+  
+  .no-scroll-mobile-only {
+    overflow: initial;
+    height: initial;
+  }
+  
 }
