--- a/src/css/components/_nav.scss
+++ b/src/css/components/_nav.scss
@@ -78,7 +78,7 @@
 #header {
   display: none;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   position: fixed;
   top: 0;
   z-index: $z-header;
