--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,11 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+.no-scroll-mobile-only {
+  overflow: hidden;
+  height: 100%;
+}
+
 .fadeIn {
   animation: fadeIn 0.5s ease-in-out forwards;
 }
@@ -29,6 +34,13 @@
   }
   to {
     opacity: 0;
+  }
+}
+/* Desktop */
+@media (min-width: 1024px) {
+  .no-scroll-mobile-only {
+    overflow: initial;
+    height: initial;
   }
 }
 *,
@@ -1012,7 +1024,7 @@ textarea {
 #header {
   display: none;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   position: fixed;
   top: 0;
   z-index: 90;
